--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                  onclick="toggleDetails(this)">
             <div class="details">
                 <p><span>Description:</span> Student-run weekly @ the University of Alberta.</p>
-                <p><span>Location:</span> 11325 89 Ave NW, Edmonton, AB T6G 2J5, Canada</p>
+                <p><span>Location:</span> Markin/CNRL, 9105 116 St NW, Edmonton, AB T6G 2W2, Canada</p>
                 <p><span>Date:</span> Fridays @ 6 PM</p>
                 <p><span>Organizer:</span> U of A Smash Club</p>
                 <p><span>Discord:</span> @leeeeroooooooy</p>
