--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                  alt="Steep Competition"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> Sherwood Parks Weekly Event hosted @ Remedy Cafe! Come for a beginner-friendly experience!</p>
+                <p><span>Description:</span> Sherwood Parks Weekly Event hosted @ Remedy Cafe! Come for a beginner-friendly experience! With Ultimate & a new side bracket every week!</p>
                 <p><span>Location:</span> 200 Festival Ln, Sherwood Park, AB T8A 4Y8, Canada</p>
                 <p><span>Date:</span> Mondays @ 6 PM</p>
                 <p><span>Organizer:</span> SHCL Smash Club</p>
@@ -161,7 +161,7 @@
                  alt="NAIT"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> Weekly NAIT Smash bracket open to the public.</p>
+                <p><span>Description:</span> Weekly NAIT Smash bracket open to the public With Ultimate & Melee</p>
                 <p><span>Location:</span>Room CAT191, 11763 106 St, Edmonton, AB T5G 2R1, Canada</p>
                 <p><span>Date:</span> Tuesdays @ 6 PM</p>
                 <p><span>Organizer:</span> NAIT Smash Club</p>
@@ -176,7 +176,7 @@
                  alt="French Bread Rumble"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> A Multi-Bracket event hosted @ The Canadian Icehouse in Downtown Edmonton.</p>
+                <p><span>Description:</span> A Multi-Bracket event hosted @ The Canadian Icehouse in Downtown Edmonton. With Ultimate, HDR and Tekken</p>
                 <p><span>Location:</span> 10332 103 St NW, Edmonton, AB T5J 0Y9, Canada</p>
                 <p><span>Date:</span> Wednesdays @ 5:30 PM</p>
                 <p><span>Organizer:</span> French Bread Gaming</p>
@@ -191,7 +191,7 @@
                  alt="U Of A Smash"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> Student-run weekly @ the University of Alberta.</p>
+                <p><span>Description:</span> Student-run weekly @ the University of Alberta With Ultimate & Melee</p>
                 <p><span>Location:</span> Markin/CNRL, 9105 116 St NW, Edmonton, AB T6G 2W2, Canada</p>
                 <p><span>Date:</span> Fridays @ 6 PM</p>
                 <p><span>Organizer:</span> U of A Smash Club</p>
@@ -227,7 +227,7 @@
                  alt="St. Albert Arcade"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> A Monthly FREE TO ENTER event hosted at St. Albert alliance church, a great cap to a month with FREE PIZZA</p>
+                <p><span>Description:</span> A Monthly FREE TO ENTER Ultimate event hosted at St. Albert alliance church, a great cap to a month with FREE PIZZA.</p>
                 <p><span>Location:</span> 200 Villeneuve Rd, St. Albert, AB T8N 3X8, Canada</p>
                 <p><span>Date:</span> Last Friday of the month</p>
                 <p><span>Organizer:</span> Andrew</p>
@@ -242,7 +242,7 @@
                  alt="Techchase"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> Alberta’s premier monthly event with top-tier talent. Hosted at The Canadian Icehouse.</p>
+                <p><span>Description:</span> Alberta’s premier Ultimate monthly event with top-tier talent. Hosted at The Canadian Icehouse.</p>
                 <p><span>Location:</span> 10332 103 St NW, Edmonton, AB T5J 0Y9, Canada</p>
                 <p><span>Date:</span> Every 3rd Saturday</p>
                 <p><span>Organizer:</span> Titanium</p>
