--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p><span>Date:</span> Tuesdays @ 6 PM</p>
                 <p><span>Organizer:</span> NAIT Smash Club</p>
                 <p><span>Discord:</span> @Deflate</p>
-                <p><a href="https://start.gg/nait-smash" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
+                <p><a href="https://start.gg/smash-at-nait" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
                 <p><span>Date:</span> Fridays @ 6 PM</p>
                 <p><span>Organizer:</span> U of A Smash Club</p>
                 <p><span>Discord:</span> @leeeeroooooooy</p>
-                <p><a href="https://start.gg/uofa" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
+                <p><a href="https://start.gg/ualberta" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
         <!-- Last Stock Leduc -->
@@ -210,7 +210,7 @@
                 <p><span>Date:</span> Every Other Friday @ 5 PM</p>
                 <p><span>Organizer:</span> Pyjama Sam</p>
                 <p><span>Discord:</span> @superpikachu117</p>
-                <p><a href="https://start.gg/uofa" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
+                <p><a href="https://start.gg/LastStockLeduc" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
 
