made font bigger

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     h2 {
       color: #ffaa00;
       margin-bottom: 1rem;
+      font-size: 4rem;
     }
 
     .image-grid {
@@ -137,7 +138,7 @@
 </header>
 
 <section class="section">
-    <h1>Weeklies</h1>
+    <h2>Weeklies</h2>
     <div class="image-grid">
 
         <!-- Steep Competition -->
@@ -218,7 +219,7 @@
 </section>
 
 <section class="section">
-    <h1>Monthlies</h1>
+    <h2>Monthlies</h2>
     <div class="image-grid">
 
         <!-- St. Albert Arcade -->
