fixed UofA description

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                  alt="U Of A Smash"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> Student-run weekly @ the University of Alberta With Ultimate & Melee</p>
+                <p><span>Description:</span> Student-run weekly @ the University of Alberta With Ultimate, HDR & Melee</p>
                 <p><span>Location:</span> Markin/CNRL, 9105 116 St NW, Edmonton, AB T6G 2W2, Canada</p>
                 <p><span>Date:</span> Fridays @ 6 PM</p>
                 <p><span>Organizer:</span> U of A Smash Club</p>
