--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                  alt="Steep Competition"
                  onclick="toggleDetails(this)">
             <div class="details">
-                <p><span>Description:</span> Sherwood Parks Weekly Event hosted @ Remedy Cafe! Come for a beginner-friendly experience! With Ultimate & a new side bracket every week!</p>
+                <p><span>Description:</span> Sherwood Parks Weekly Event hosted @ Remedy Cafe! Come for a beginner-friendly experience! With Ultimate, Rivals 2 and P+</p>
                 <p><span>Location:</span> 200 Festival Ln, Sherwood Park, AB T8A 4Y8, Canada</p>
                 <p><span>Date:</span> Mondays @ 6 PM</p>
                 <p><span>Organizer:</span> SHCL Smash Club</p>
@@ -234,6 +234,20 @@
                 <p><span>Organizer:</span> Andrew</p>
                 <p><span>Discord:</span> @chrygore</p>
                 <p><a href="https://start.gg/st-albert" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
+            </div>
+        </div>
+        <!-- Colchester -->
+        <div class="tournament-card">
+            <img src="https://images.start.gg/images/tournament/807675/image-11199ddc4b887e1a2c17d4c187b98ea1.jpg"
+                 alt="Colchester"
+                 onclick="toggleDetails(this)">
+            <div class="details">
+                <p><span>Description:</span> A Ultimate Monthly out in the country, Hosted at colchester Community league, with Rivals 2 and P+</p>
+                <p><span>Location:</span> 23219 Township Rd 520, Sherwood Park, AB T8B 1G1, Canada </p>
+                <p><span>Date:</span> 3rd Tuesday of the month</p>
+                <p><span>Organizer:</span> SHCL</p>
+                <p><span>Discord:</span> @the_craig1986</p>
+                <p><a href="https://start.gg/colchester" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
 
