added Christo and made LSL a monthly

--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 <body>
 <header>
     <h1>Edmonton Smash</h1>
-    <p class="description">A family built around the game we love.</p>
+    <p class="description">A family built around the game we love.
+        <a href="https://discord.com/invite/eCmMzuN"> Join our Discord!</a>
+    </p>
 </header>
 
 <section class="section">
@@ -200,20 +202,6 @@
                 <p><a href="https://start.gg/ualberta" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
-        <!-- Last Stock Leduc -->
-        <div class="tournament-card">
-            <img src="https://images.start.gg/images/tournament/796505/image-6602786a5a15df873f2e5a0e47b39fd1.png"
-                 alt="Last Stock Leduc"
-                 onclick="toggleDetails(this)">
-            <div class="details">
-                <p><span>Description:</span> A Bi-Weekly in Leduc with Ultimate, Melee and P+.</p>
-                <p><span>Location:</span> 4810 50th Ave, Leduc, AB T9E 6X9, Canada</p>
-                <p><span>Date:</span> Every Other Friday @ 5 PM</p>
-                <p><span>Organizer:</span> Pyjama Sam</p>
-                <p><span>Discord:</span> @superpikachu117</p>
-                <p><a href="https://start.gg/LastStockLeduc" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
-            </div>
-        </div>
 
     </div>
 </section>
@@ -246,7 +234,7 @@
                 <p><span>Location:</span> 23219 Township Rd 520, Sherwood Park, AB T8B 1G1, Canada </p>
                 <p><span>Date:</span> 3rd Tuesday of the month</p>
                 <p><span>Organizer:</span> SHCL</p>
-                <p><span>Discord:</span> @the_craig1986</p>
+                <p><span>Discord:</span> @mechanical_man</p>
                 <p><a href="https://start.gg/colchester" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
@@ -259,7 +247,7 @@
             <div class="details">
                 <p><span>Description:</span> Alberta’s premier Ultimate monthly event with top-tier talent. Hosted at The Canadian Icehouse.</p>
                 <p><span>Location:</span> 10332 103 St NW, Edmonton, AB T5J 0Y9, Canada</p>
-                <p><span>Date:</span> Every 3rd Saturday</p>
+                <p><span>Date:</span> 3rd Saturday of the month</p>
                 <p><span>Organizer:</span> Titanium</p>
                 <p><span>Discord:</span> @titaniumssb</p>
                 <p><a href="https://start.gg/tcedmonton" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
@@ -278,6 +266,36 @@
                 <p><span>Organizer:</span> Jade</p>
                 <p><span>Discord:</span> @tinofsalsa</p>
                 <p><a href="https://start.gg/romhack" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
+            </div>
+        </div>
+
+        <!-- Last Stock Leduc -->
+        <div class="tournament-card">
+            <img src="https://images.start.gg/images/tournament/796505/image-6602786a5a15df873f2e5a0e47b39fd1.png"
+                 alt="Last Stock Leduc"
+                 onclick="toggleDetails(this)">
+            <div class="details">
+                <p><span>Description:</span> A Monthly in Leduc with Ultimate, Melee and P+.</p>
+                <p><span>Location:</span> 4810 50th Ave, Leduc, AB T9E 6X9, Canada</p>
+                <p><span>Date:</span> 2nd Friday of the month @ 5 PM</p>
+                <p><span>Organizer:</span> Pyjama Sam</p>
+                <p><span>Discord:</span> @superpikachu117</p>
+                <p><a href="https://start.gg/LastStockLeduc" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
+            </div>
+        </div>
+
+        <!-- Christo -->
+        <div class="tournament-card">
+            <img src="https://images.start.gg/images/tournament/823000/image-33517a16d4333f754d84419c948eee85.png"
+                 alt="Christo Monthly"
+                 onclick="toggleDetails(this)">
+            <div class="details">
+                <p><span>Description:</span> A Melee Monthly near the UofA with HDR and 64 Remix side brackets.</p>
+                <p><span>Location:</span> 11325 89 Ave NW, Edmonton, AB T6G 2J5, Canada</p>
+                <p><span>Date:</span> 2nd Saturday of the month @ 1 PM</p>
+                <p><span>Organizer:</span> Christo</p>
+                <p><span>Discord:</span> @Liar_o7</p>
+                <p><a href="https://start.gg/christo" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
             </div>
         </div>
 
