removed Techchase and steep

--- a/index.html
+++ b/index.html
@@ -144,20 +144,20 @@
     <h2>Weeklies</h2>
     <div class="image-grid">
 
-        <!-- Steep Competition -->
-        <div class="tournament-card">
-            <img src="https://images.start.gg/images/tournament/807384/image-048fdf8f515ab139a7bace3c34676bf8.png"
-                 alt="Steep Competition"
-                 onclick="toggleDetails(this)">
-            <div class="details">
-                <p><span>Description:</span> Sherwood Parks Weekly Event hosted @ Remedy Cafe! Come for a beginner-friendly experience! With Ultimate, Rivals 2 and P+</p>
-                <p><span>Location:</span> 200 Festival Ln, Sherwood Park, AB T8A 4Y8, Canada</p>
-                <p><span>Date:</span> Mondays @ 6 PM</p>
-                <p><span>Organizer:</span> SHCL Smash Club</p>
-                <p><span>Discord:</span> @mechanical_man</p>
-                <p><a href="https://start.gg/steep" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
-            </div>
-        </div>
+<!--        &lt;!&ndash; Steep Competition &ndash;&gt;-->
+<!--        <div class="tournament-card">-->
+<!--            <img src="https://images.start.gg/images/tournament/807384/image-048fdf8f515ab139a7bace3c34676bf8.png"-->
+<!--                 alt="Steep Competition"-->
+<!--                 onclick="toggleDetails(this)">-->
+<!--            <div class="details">-->
+<!--                <p><span>Description:</span> Sherwood Parks Weekly Event hosted @ Remedy Cafe! Come for a beginner-friendly experience! With Ultimate, Rivals 2 and P+</p>-->
+<!--                <p><span>Location:</span> 200 Festival Ln, Sherwood Park, AB T8A 4Y8, Canada</p>-->
+<!--                <p><span>Date:</span> Mondays @ 6 PM</p>-->
+<!--                <p><span>Organizer:</span> SHCL Smash Club</p>-->
+<!--                <p><span>Discord:</span> @mechanical_man</p>-->
+<!--                <p><a href="https://start.gg/steep" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <!-- NAIT -->
         <div class="tournament-card">
@@ -240,20 +240,20 @@
             </div>
         </div>
 
-        <!-- Techchase -->
-        <div class="tournament-card">
-            <img src="https://images.start.gg/images/tournament/807142/image-49322faf3363c08090c56af06c532f17.png"
-                 alt="Techchase"
-                 onclick="toggleDetails(this)">
-            <div class="details">
-                <p><span>Description:</span> Alberta’s premier Ultimate monthly event with top-tier talent. Hosted at The Canadian Icehouse.</p>
-                <p><span>Location:</span> 10332 103 St NW, Edmonton, AB T5J 0Y9, Canada</p>
-                <p><span>Date:</span> 3rd Saturday of the month</p>
-                <p><span>Organizer:</span> Titanium</p>
-                <p><span>Discord:</span> @titaniumssb</p>
-                <p><a href="https://start.gg/tcedmonton" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>
-            </div>
-        </div>
+<!--        &lt;!&ndash; Techchase &ndash;&gt;-->
+<!--        <div class="tournament-card">-->
+<!--            <img src="https://images.start.gg/images/tournament/807142/image-49322faf3363c08090c56af06c532f17.png"-->
+<!--                 alt="Techchase"-->
+<!--                 onclick="toggleDetails(this)">-->
+<!--            <div class="details">-->
+<!--                <p><span>Description:</span> Alberta’s premier Ultimate monthly event with top-tier talent. Hosted at The Canadian Icehouse.</p>-->
+<!--                <p><span>Location:</span> 10332 103 St NW, Edmonton, AB T5J 0Y9, Canada</p>-->
+<!--                <p><span>Date:</span> 3rd Saturday of the month</p>-->
+<!--                <p><span>Organizer:</span> Titanium</p>-->
+<!--                <p><span>Discord:</span> @titaniumssb</p>-->
+<!--                <p><a href="https://start.gg/tcedmonton" target="_blank" style="color: #ffaa00;">View on Start.gg</a></p>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <!-- RomHack -->
         <div class="tournament-card">
